Resolved issue where nav bar scrolled in behind GroupPage banner and info box.

--- a/KSS/KSS/student-app/src/components/styles/GroupPage.css
+++ b/KSS/KSS/student-app/src/components/styles/GroupPage.css
@@ -5,9 +5,15 @@
     margin-bottom: -100px;
 }
 
-#info {
-    position: relative;
-    overflow: hidden;
+#groupBanner {
+    margin: auto;
+    background-image: url("../images/groupPage.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 275px;
+}
+
+#groupInfo {
     margin-top: -225px;
     margin-right: 10px;
     margin-right: 10px;
