--- a/KSS/KSS/student-app/src/components/styles/HomePage.css
+++ b/KSS/KSS/student-app/src/components/styles/HomePage.css
@@ -81,14 +81,6 @@ body{
     background-color: lightgray;
 }
 
-#headerImage {
-    height: 300px;
-    width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-}
-
 @media only screen and (max-width: 636px) {
     .course {
         max-width: 275px;
